--- a/test/templates/secret.yaml
+++ b/test/templates/secret.yaml
@@ -4,8 +4,6 @@ metadata:
   name: {{ include "test.fullname" . }}
   labels:
     {{- include "test.labels" . | nindent 4 }}
-  # annotations:
-  #   avp.kubernetes.io/path: "kv-v2/data/argocd"
 type: Opaque
 stringData:
-  TOKEN: <password>
+  TOKEN: 'TEST'
