--- a/argocd-vault-replacer/secret/secret.yml
+++ b/argocd-vault-replacer/secret/secret.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysecret
+  name: hello-world-secret
   annotations:
     avp.kubernetes.io/path: "kv-v2/data/argocd"
 type: Opaque
